# Datalogger

./: GUI_interface.py  csv2021-09-20-15-30-00.csv  csv2021-09-20-15-37-34.csv  datalogger.py  installaton.docx  pyproject.toml  settings.json
csv/: 1632171604.694896.csv  1632171810.329446.csv  1632172150.591168.csv  1632172866.531591.csv  1632177751.521618.csv  1632181888.419626.csv  1633043047.769453.csv  1633043122.201804.csv  1633043312.218723.csv  2021-09-20-12-17-29.csv
tests/: test_simple_datalogger.py
