[tool.poetry]
name = "simple-datalogger"
version = "0.1.0"
description = ""
authors = ["JennyCGT <jenniferguayta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.4"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = 'datalogger:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

